--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "antd": "^5.21.2",
     "axios": "^1.7.7",
     "bootstrap": "^5.3.3",
+    "http-proxy-middleware": "^3.0.2",
     "react": "^18.3.1",
     "react-bootstrap": "^2.10.5",
     "react-dom": "^18.3.1",
